# altay_cloud_scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
altay_cloud_scanner/: __init__.py  aws_session.py  cli.py  output.py  scanner.py  scoring.py  ui.py
altay_cloud_scanner/checks/: __init__.py  elb.py  iam.py  network.py  rds.py  s3.py
altay_cloud_scanner/tests/: test_iam.py  test_network.py  test_s3.py
