[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altay-cloud-scanner"
version = "1.0.0"
description = "AWS Cloud Misconfiguration Scanner - Read-Only Güvenlik Taraması"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Koray Yolcu", email = "kkyolcu@gmail.com"},
]
keywords = ["aws", "security", "scanner", "cloud", "misconfiguration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "moto>=5.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
altay-cloud = "altay_cloud_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/kkyolcu/altay-cloud-scanner"
Issues = "https://github.com/kkyolcu/altay-cloud-scanner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["altay_cloud_scanner*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["altay_cloud_scanner/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]